wip additional propterties